--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
 <meta charset="utf-8">
 <link href="meuestilo.css" type="text/css" rel="stylesheet">
+<title>Feliz aniversário!</title>
+<style>
+
+	body{
+	background-image:url(aniv6.jpg);
+	background-attachment: fixed;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-color: #000;
+	}
+
+</style>
 </head>
 
-<title>Feliz aniversário!</title>
-<body>
-<body background="aniv6.jpg" bgproperties="fixed">
+<body width=100%>
 
     <div class="btns">
      
